# scale-info

./: Cargo.toml
derive/: Cargo.toml
derive/src/: lib.rs
src/: build.rs  impls.rs  lib.rs  tests.rs
src/ty/: mod.rs
test_suite/derive_tests_no_std/src/: main.rs
test_suite/tests/: codec.rs  derive.rs  json.rs
test_suite/tests/ui/: fail_custom_bounds_missing_skip_type_params.rs  fail_duplicate_bounds_params.rs  fail_missing_derive.rs  fail_unions.rs  fail_with_invalid_capture_docs_attr.rs  fail_with_invalid_codec_attrs.rs  fail_with_invalid_scale_info_attrs.rs  pass_basic_generic_type.rs  pass_combined_attributes.rs  pass_complex_generic_self_referential_type.rs  pass_custom_bounds.rs  pass_custom_bounds_empty.rs  pass_custom_bounds_fix_overflow.rs  pass_no_implicit_prelude.rs  pass_non_static_lifetime.rs  pass_raw_identifers.rs  pass_self_referential.rs  pass_skip_type_params.rs  pass_use_codec_attrs_without_deriving_encode.rs  pass_with_custom_crate_path.rs
