[package]
name = "eosio-scale-info-derive"
version = "2.1.3"
authors = [
    "Parity Technologies <admin@parity.io>",
    "Centrality Developers <support@centrality.ai>",
]
edition = "2021"
rust-version = "1.56.1"

license = "Apache-2.0"
repository = "https://github.com/paritytech/eosio-scale-info"
documentation = "https://docs.rs/eosio-scale-info"
homepage = "https://www.parity.io/"
description = "Derive type info for SCALE encodable types"
categories = ["no-std", "encoding"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["derive", "visit", "visit-mut", "extra-traits"] }
proc-macro2 = "1.0"
proc-macro-crate = "1"

[features]
default = ["docs"]
# Include code docs in type metadata.
docs = []
